Update models, views, admin to what is needed for staff

--- a/donations/templates/form.html
+++ b/donations/templates/form.html
@@ -224,7 +224,8 @@
                 method: "POST",
                 headers: { "Content-Type": "application/json"},
                 body: JSON.stringify({ checkoutToken: token,
-                amount: options.amount})
+                amount: options.amount,
+                designation: designation})
             })
                 .then(response => {
                   if (!response.ok) {
