Update models with user entered first and last name Add donation amount in dollars to model

--- a/donations/templates/form.html
+++ b/donations/templates/form.html
@@ -225,7 +225,10 @@
                 headers: { "Content-Type": "application/json"},
                 body: JSON.stringify({ checkoutToken: token,
                 amount: options.amount,
-                designation: designation})
+                designation: designation,
+                first_name: first_name,
+                last_name: last_name,
+                })
             })
                 .then(response => {
                   if (!response.ok) {
